--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,20 @@
   <meta charset="UTF-8">
   <title>Beer List</title>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.25/css/uikit.min.css" />
 </head>
 
 <body>
+  <!--styles-->
+  <style>
+    i:hover {
+      cursor: pointer;
+    }
+  </style>
+  
+  <!--App-->
   <div id="app"></div>
+  
   <!--Webpack-->
   <script src="bundle.js"></script>
 </body>
